k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bigdataplatform
  labels:
    name: bigdataplatform
    environment: dev
